# mini-paxos

./: Cargo.toml  build.rs
protos/: PaxosApi.proto  paxos_api.rs
src/: main.rs  paxos.rs
