[package]
name = "mini-paxos"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
tonic = "0.12"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
env_logger = "0.9"
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"
[build-dependencies]
tonic-build = "0.12"